[gd_scene load_steps=8 format=3 uid="uid://cvby7m5v1nkhv"]

[ext_resource type="Script" path="res://scenes/queued_song.gd" id="1_b8n1g"]
[ext_resource type="Script" path="res://scripts/queued_song_name.gd" id="2_4qxf3"]
[ext_resource type="FontFile" uid="uid://b1dbanptwgp48" path="res://assets/fonts/monsterrat/bold.ttf" id="2_rpc70"]
[ext_resource type="Texture2D" uid="uid://bjqjront55knl" path="res://assets/images/icons/play_arrow.svg" id="2_vqhy2"]
[ext_resource type="Texture2D" uid="uid://bhobnseuvfjn2" path="res://assets/images/icons/delete.svg" id="3_bd0i0"]

[sub_resource type="LabelSettings" id="LabelSettings_h83h0"]
font = ExtResource("2_rpc70")
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_fr62i"]
font_size = 14

[node name="queued_song" type="Panel"]
custom_minimum_size = Vector2(224, 48)
script = ExtResource("1_b8n1g")

[node name="container" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchor_right = 0.75
anchor_bottom = 1.0

[node name="song_name" type="Label" parent="container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 4.0
grow_horizontal = 2
text = "No Song"
label_settings = SubResource("LabelSettings_h83h0")
vertical_alignment = 2
script = ExtResource("2_4qxf3")

[node name="timer" type="Timer" parent="container/song_name"]
wait_time = 0.5

[node name="artist_name" type="Label" parent="container"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.5)
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
grow_horizontal = 2
text = "unknown"
label_settings = SubResource("LabelSettings_fr62i")
text_overrun_behavior = 3

[node name="controls" type="Control" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="play_button" type="Button" parent="controls"]
modulate = Color(1, 1, 1, 0.75)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
icon = ExtResource("2_vqhy2")
flat = true
icon_alignment = 2
expand_icon = true

[node name="remove_button" type="Button" parent="controls"]
modulate = Color(1, 0.5, 0.5, 0.75)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
icon = ExtResource("3_bd0i0")
flat = true
expand_icon = true

[connection signal="timeout" from="container/song_name/timer" to="container/song_name" method="_tick"]
[connection signal="pressed" from="controls/play_button" to="." method="_on_play_pressed"]
[connection signal="pressed" from="controls/remove_button" to="." method="_on_remove_pressed"]
